--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ on:
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   terraform:
     name: 'Terraform'
@@ -23,38 +23,34 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: Terraform 
+        working-directory: Terraform
 
     steps:
-      - name: Checkout
+      - name:  Checkout Repository
         uses: actions/checkout@v4
-      
-      - name: Azure Login
+
+      - name:  Azure Login via OIDC
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-      - name: Setup Terraform
+      - name:  Setup Terraform CLI
         uses: hashicorp/setup-terraform@v1
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Init with backend config
+      - name:  Terraform Init with Backend Config
         run: |
           terraform init \
-            -backend-config="resource_group_name=storageaccount" \
-            -backend-config="storage_account_name=terraformstatejb" \
-            -backend-config="container_name=tfstate" \
-            -backend-config="key=dev.terraform.tfstate"
+            -backend-config="resource_group_name=${{ secrets.TF_BACKEND_RESOURCE_GROUP }}" \
+            -backend-config="storage_account_name=${{ secrets.TF_BACKEND_STORAGE_ACCOUNT }}" \
+            -backend-config="container_name=${{ secrets.TF_BACKEND_CONTAINER }}" \
+            -backend-config="key=${{ secrets.TF_BACKEND_KEY }}"
 
-      - name: Terraform Plan
+      - name:  Terraform Plan
         run: terraform plan -var-file="dev.tfvars"
 
-      # - name: Terraform Apply
-      #   run: terraform apply -var-file="dev.tfvars" -auto-approve
-      
-      - name: Terraform Destroy
-        run: terraform destroy -var-file="dev.tfvars" -auto-approve
+      - name:  Terraform Apply
+        run: terraform apply -var-file="dev.tfvars" -auto-approve
