--- a/src/MyHealth.Web/appsettings.json
+++ b/src/MyHealth.Web/appsettings.json
@@ -6,7 +6,7 @@
   "DefaultAdminPassword": "P2ssw0rd@123",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:demo123456319.database.windows.net,1433;Initial Catalog=demo;Persist Security Info=False;User ID=sqladminuser;Password=P@ssword1234!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:lokeshsqlserver112.database.windows.net,1433;Initial Catalog=lokeshsqldb2684;Persist Security Info=False;User ID=sqladminuser;Password=P@ssword1234!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "ApplicationInsights": {
