--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         uses: azure/aks-set-context@v3
         with:
           resource-group: demo
-          cluster-name: aks-demo-cluster
+          cluster-name: lokesh-cluster
 
       - name: Apply Kubernetes manifests
         run: kubectl apply -f ./deploy-files/mhc-aks.yaml
